--- a/portfolio/src/components/footer/footer.css
+++ b/portfolio/src/components/footer/footer.css
@@ -46,6 +46,11 @@ color: var(--title-color);
 text-align: center;
 font-size: var(--smaller-font-size);
 }
+.footer__social a{
+   
+    margin-top: 2rem;
+    
+}
 
 /*=============== BREAKPOINTS ===============*/
 /* For large devices */
@@ -56,7 +61,7 @@ font-size: var(--smaller-font-size);
     font-size: 1rem;
 }
 
-/* .footer__social-link{
+/* .footer__social-link a{
     margin-top: 1.5rem;
 } */
 
