--- a/portfolio/src/components/header/header.css
+++ b/portfolio/src/components/header/header.css
@@ -5,6 +5,7 @@
   left: 0;
   z-index: var(--z-fixed);
   background-color: var(--body-color);
+  padding-top: 0.5rem;
 }
 
 .nav {
@@ -133,3 +134,4 @@
     column-gap: 0;
   }
 }
+
