--- a/portfolio/src/components/about/about.css
+++ b/portfolio/src/components/about/about.css
@@ -14,9 +14,11 @@
   margin-bottom: var(--mb-2);
 }
 .about__box {
-  background-color: var(--container-color);
+  /* background-color: var(--container-color); */
+ background-color:var(--border-background);
   /* border: 2px solid red; */
-  border: 1px solid rgba(0, 0, 0, 0.1);
+  /* border: 1px solid rgba(0, 0, 0, 0.1); */
+  border:var(--border-layout);
   border-radius: 0.75rem;
   text-align: center;
   padding: 1rem 1.25rem;
