--- a/portfolio/src/components/contact/contact.css
+++ b/portfolio/src/components/contact/contact.css
@@ -19,7 +19,9 @@
 }
 .contact__card{
     background-color: var(--container-color);
-    border:1px solid var(0,0,0,0.1);
+
+    /* border:1px solid var(0,0,0,0.1); */
+    border: var(--border-layout);
     padding: 1rem;
     border-radius: 0.75rem;
     text-align: center;
@@ -72,7 +74,8 @@
     left: 0;
     width: 100%;
     height: 100%;
-    border: 2px solid rgba(0,0,0,0.3);
+    /* border: 2px solid rgba(0,0,0,0.3); */
+    border: var(--border-layout);
     background:none;
     color: var(--text-color);
     outline: none;
