--- a/portfolio/src/components/footer/footer.css
+++ b/portfolio/src/components/footer/footer.css
@@ -1,9 +1,10 @@
 .footer{
     background-color: var(--container-color);
-    border-top: 1px solid rgba(0,0,0,0.1)
+    /* border-top: 1px solid rgba(0,0,0,0.1); */
+    border-top:var(--border-layout);
 }
 .footer__container{
-    padding: 2rem 0 6rem;
+    padding: 2rem 0 2rem;
 }
 .footer__title,
 .footer__link{
@@ -41,7 +42,7 @@
 }
 .footer__copy{
 display: block;
-margin-top: 4.5rem;
+margin-top: 1.5rem;
 color: var(--title-color);
 text-align: center;
 font-size: var(--smaller-font-size);
