--- a/portfolio/src/components/header/header.css
+++ b/portfolio/src/components/header/header.css
@@ -4,7 +4,10 @@
   top: 0;
   left: 0;
   z-index: var(--z-fixed);
+  /* background-color: var(--body-color); */
   background-color: var(--body-color);
+  /* background-color: red; */
+  /* border: var(--border-layout); */
   padding-top: 0.5rem;
 }
 
