--- a/portfolio/src/components/services/services.css
+++ b/portfolio/src/components/services/services.css
@@ -6,8 +6,11 @@
 
 .services__content {
   position: relative;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  background-color: var(--container-color);
+  /* border: 1px solid rgba(0, 0, 0, 0.1); */
+  border: var(--border-layout);
+  /* background-color: var(--container-color); */
+  background-color: var(--border-background);
+  border-radius: 1.5rem;
   padding: 6rem 0 2rem 2.5rem;
 }
 
@@ -60,6 +63,8 @@
   width: 500px;
   position: relative;
   background-color: var(--container-color);
+
+  border: var(--border-layout);
   /* background-color:red; */
   /* background-color: aliceblue; */
   padding: 4.5rem 2.5rem 2.5rem;
