--- a/portfolio/src/components/skills/skills.css
+++ b/portfolio/src/components/skills/skills.css
@@ -4,8 +4,10 @@
   justify-content: center;
 }
 .skills__content {
-  background-color: var(--container-color);
-  border: 1px solid rgba(0, 0, 0, 0.1);
+  /* background-color: var(--container-color); */
+  background-color: var(--border-background);
+  /* border: 1px solid rgba(0, 0, 0, 0.1); */
+  border: var(--border-layout);
   padding: 2rem 4rem;
   border-radius: 1.25rem;
 }
