--- a/portfolio/src/components/testimonials/testimonials.css
+++ b/portfolio/src/components/testimonials/testimonials.css
@@ -2,8 +2,10 @@
   width: 750px;
 }
 .testimonial__card {
-  background-color: var(--container-color);
-  border: 1px solid rgba(0, 0, 0, 0.1);
+  /* background-color: var(--container-color); */
+  background-color: var(--border-background);
+  /* border: 1px solid rgba(0, 0, 0, 0.1); */
+  border: var(--border-layout);
   padding: 1.5rem 2rem;
   border-radius: 1.5rem;
   margin-bottom: var(--mb-3);
