--- a/portfolio/src/components/qualification/qualification.css
+++ b/portfolio/src/components/qualification/qualification.css
@@ -101,3 +101,9 @@
     gap:0.5rem;
   }
 }
+.education__icon{
+  background-color: var(--education-icon);
+  border-radius: 1rem;
+  font-size: 1.5rem;
+
+}
