changes_fonts_colors

--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -1,4 +1,3 @@
-
 /*=============== GOOGLE FONTS ===============*/
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
 
@@ -15,17 +14,22 @@
   --text-color: hsl(var(--hue), var(--sat), 46%);
   --body-color: hsl(var(--hue), var(--sat), 98%);
   --container-color: #fff;
---btn-color: white;
---border-layout:1px solid rgba(0, 0, 0, 0.1);
---border-background: #fff;
-/* --btn:white; */
- /* Additional */
-  --nav-bg:#f4f4f4;
-  --button-bg:#ffff;
-  --education-icon:orange;
+  --btn-color: white;
+  --border-layout: 1px solid rgba(0, 0, 0, 0.1);
+  --border-background: #fff;
 
+  --heading-text: #111827;
 
+  --content-text: #1f2937;
 
+  --subcontent-text: #4b5563;
+
+  /* Additional */
+  --nav-bg: #f4f4f4;
+  --button-bg: #ffff;
+  --education-icon: orange;
+  --links-text: #3b82f6;
+  --links-button: #2d2d2d;
 
   /*========== Font and typography ==========*/
   --body-font: "Poppins", sans-serif;
@@ -63,41 +67,48 @@
 }
 
 /* Dark Theme */
-.dark-theme{
+.dark-theme {
+  /* dark-mode background */
   background-color: #121212;
-  color: #ffff;
+
+  /* boxes border */
+  --border-layout: 1px solid #333333;
+  /* boxes background */
+  --border-background: rgba(0, 0, 0, 0.5);
+
+  /* Text color */
+  color: #f5f5f5;
+
   /* Additional */
-  --nav-bg:#1f1f1f;
-  --button-bg:#333333;
+  --nav-bg: #1f1f1f;
+  --button-bg: #333333;
 
   /* Colors */
-    --title-color: #ffff;
+  --title-color: #fff;
+  /* --title-color: red; */
   --title-color-dark: #ffff;
-  --text-color: #ffff;
-  --body-color: #ffff;
-  --container-color:#121212;
-  /* --container-color:red; */
-  --body-color:#121212;
-  --btn-color:white;
-  --border-layout:1px solid white;
-  --border-background: linear-gradient(135deg, #1e1e1e, #0d1117);
+  /* Live preview / write me/ Testnomial buttons/ line/ mode button text */
+  --text-color: #b0b0b0;
+  /*Header Background  */
+  --body-color: #1e1e1e;
+
+  /* Talk to me section / footer/ button text */
+  --container-color: #121212;
+
+  --btn-color: white;
   --education-icon: yellow;
+  --heading-text: #f5f5f5;
+  --content-text: #e0e0e0;
+  --subcontent-text: #b0b0b0;
 }
 
-body{
+body {
   background-color: var(--bg-color);
-  color:var(--text-color);
+  color: var(--text-color);
   transition: #121212 0.3s ease, color 0.3s ease;
 }
-/* nav{
-  background-color: var(--nav-bg);
-  padding: 1rem;
-  display: flex;
-  justify-items: center;
-  align-items: center;
-} */
 
-.theme-toggle{
+.theme-toggle {
   padding: 8px 16px;
   border-radius: 6px;
   border: var(--border-layout);
@@ -176,13 +187,14 @@ img {
 
 .section__title {
   font-size: var(--h1-font-size);
-  color: var(--title-color);
+  color: var(--heading-text);
 }
 
 .section__subtitle {
   display: block;
   font-size: var(--small-font-size);
   margin-bottom: 4rem;
+  color: var(--content-text);
 }
 
 .section__title,
@@ -272,233 +284,3 @@ img {
     margin-right: var(--mb-1);
   }
 }
-
-
-
-
-/* --------------- ------------------------------------------------------------------------------- */
-/* = = = = = GOOGLE FONTS = = = = = */
-/* @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap"); */
-/* @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap"); */
-
-/* = = = = = VARIABLES CSS = = = = = */
-/* :root { */
-  /* --header-height: 3rem; */
-
-  /* = = = = = Colors = = = = = */
-  /* Color mode HSL(hue, saturation, lightness */
-  /* --hue: 0;
-  --sat: 0%;
-  --title-color: hs1(var(--hue), var(--sat), 20%);
-  --title-color-dark: hs1(var(--hue), var(--sat), 0%);
-  --text-color: hs1(var(--hue), var(--sat), 46%);
-  --body-color: hs1(var(--hue), var(--sat), 98%);
-  --container: #fff; */
-
-  /* = = = = = Font and typography = = = = = */
-  /* --body-font: "Poppins", sans-serif; */
-
-  /* .5rem = 8px | 1rem = 16px ... */
-  /* --big-font-size: 3.5rem;
-  --h1-font-size: 2.25rem;
-  --h2-font-size: 1.5rem;
-  --h3-font-size: 1.25rem;
-  --normal-font-size: 1rem;
-  --small-font-size: 0.875rem;
-  --smaller-font-size: 0.813rem;
-  --tiny-font-size: 0.625rem; */
-
-  /* = = = = = Font weight = = = = = */
-  /* --font-normal: 400;
-  --font-medium: 500;
-  --font-semi-bold: 600; */
-
-  /* = = = = = Margenes Bottom = = = = = */
-  /* .5rem = 8px | 1rem = 16px ... */
-  /* --mb-0-25: 0.25rem;
-  --mb-0-5: 0.5rem;
-  --mb-0-75: 0.75rem;
-  --mb-1: 1rem;
-  --mb-1-5: 1.5rem;
-  --mb-2: 2rem;
-  --mb-2-5: 2.5rem;
-  --mb-3: 3rem; */
-
-  /* = = = = = Z index = = = = = */
-  /* --z-tooltip: 10;
-  --z-fixed: 100;
-  --z-modal: 1000;
-} */
-/* Responsive typography */
-/* @media screen and (max-width: 992px) {
-  :root {
-    --big-font-size: 2.75rem;
-    --h1-font-size: 1.5rem;
-    --h2-font-size: 1.25rem;
-    --h3-font-size: 1rem;
-    --normal-font-size: 0.938rem;
-    --small-font-size: 0.813rem;
-    --smaller-font-size: 0.75rem;
-  }
-} */
-
-/* = = = = = BASE = = = = = */
-/* * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-} */
-
-/* html {
-  scroll-behavior: smooth;
-} */
-/* 
-body,
-button,
-input,
-textarea {
-  font-family: var(--body-font);
-  font-size: var(--normal-font-size);
-}
-
-body {
-  background-color: var(--body-color);
-  color: var(--text-color);
-}
-
-h1,
-h2,
-h3 {
-  color: var(--title-color);
-  font-weight: var(--font-semi-bold);
-} */
-/* 
-ul {
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
-}
-
-button {
-  cursor: pointer;
-  border: none;
-  outline: none;
-}
-
-img {
-  max-width: 100%;
-  height: auto;
-} */
-
-/* = = = = = REUSABLE CSS CLASSES = = = = = */
-/* .section {
-  padding: 6rem 0 2rem;
-}
-
-.section__title {
-  font-size: var(--h1-font-size);
-  color: var(--title-color);
-}
-
-.section__subtitle {
-  display: block;
-  font-size: var(--small-font-size);
-  margin-bottom: 4rem;
-}
-
-.section__title,
-.section__subtitle {
-  text-align: center;
-} */
-
-/* = = = = = LAYOUT = = = = = */
-
-/* .container {
-  max-width: 968px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.grid {
-  display: grid;
-  gap: 1.5rem;
-} */
-
-/* = = = = = BUTTONS = = = = = */
-
-/* .button {
-  display: inline-block;
-  background-color: var(--title-color);
-  color: var(--container-color);
-  padding: 1.25rem 2rem;
-  border-radius: 1rem;
-  font-weight: var(--font-medium);
-}
-
-.button:hover {
-  background-color: var(--title-color-dark);
-} */
-
-/* .button__icon{
-  margin-left: var(--mb-0-5);
-} */
-/* .button__icons {
-  margin-left: var(--mb-0-5);
-}
-
-.button--flex {
-  display: inline-flex;
-  align-items: center;
-} */
-
-/* = = = = = BREAKPOINTS = = = = = */
-
-/* For Large devices */
-/* @media screen and (max-width: 992px) {
-  .container {
-    margin-left: var(--mb-1-5);
-    margin-right: var(--mb-1-5);
-  }
-  .button {
-    padding: 1rem 1.75rem;
-  }
-  .button__icon {
-    width: 22px;
-    height: 22px;
-  }
-} */
-
-/* For Medium devices */
-/* @media screen and (max-width: 768px) {
-  body{
-    margin: 0 0 var(--header-height) 0;
-  }
-  .section {
-    padding: 2rem 0 4rem;
-  }
-
-.section__subtitle{
-  margin-bottom: var(--mb-3);
-}
-
-}
-
-@media screen and (max-width: 576px) {
-} */
-
-/* For Small devices */
-
-/* @media screen and (max-width: 350px) {
-  :root {
-    --big-font-size: 2.25rem;
-  }
-  .container {
-    margin-left: var(--mb-1);
-    margin-right: var(--mb-1);
-  }
-} */
-
-/* -------------------------------------------------- */
-
