--- a/portfolio/src/components/about/info.css
+++ b/portfolio/src/components/about/info.css
@@ -1,6 +1,5 @@
 #badge, #case, #headphone{
-    background-color: #ffffff;
-    /* color: orangered; */
+    background-color: #f5f5f5;
     color:  #d93025;
     border-radius: 0.4rem;
 }
