--- a/portfolio/src/components/contact/contact.css
+++ b/portfolio/src/components/contact/contact.css
@@ -8,8 +8,8 @@
   text-align: center;
   font-size: var(--h3-font-size);
   font-weight: var(--font-medium);
-  /* font-weight: 600; */
   margin-bottom: var(--mb-1-5);
+  color: var(--content-text);
 }
 
 .contact__info {
@@ -18,10 +18,8 @@
   grid-template-columns: 300px;
 }
 .contact__card {
-  background-color: var(--container-color);
-
-  /* border:1px solid var(0,0,0,0.1); */
   border: var(--border-layout);
+  background-color: var(--border-background);
   padding: 1rem;
   border-radius: 0.75rem;
   text-align: center;
@@ -39,13 +37,16 @@
 
 .contact__card-title {
   font-weight: var(--font-medium);
+  color: var(--content-text);
 }
 .contact__card-data {
   display: block;
   margin-bottom: var(--mb-0-75);
+  color: var(--subcontent-text);
 }
 .contact__button {
-  color: var(--text-color);
+  color: var(--links-text);
+  color: var(--links-text);
   font-size: var(--small-font-size);
   display: inline-flex;
   align-items: center;
@@ -75,7 +76,6 @@ textarea {
   left: 0;
   width: 100%;
   height: 100%;
-  /* border: 2px solid rgba(0,0,0,0.3); */
   border: var(--border-layout);
   background: none;
   color: var(--text-color);
