--- a/portfolio/src/components/footer/footer.css
+++ b/portfolio/src/components/footer/footer.css
@@ -1,93 +1,91 @@
-.footer{
-    background-color: var(--container-color);
-    /* border-top: 1px solid rgba(0,0,0,0.1); */
-    border-top:var(--border-layout);
+.footer {
+  background-color: var(--container-color);
+  border-top: var(--border-layout);
 }
-.footer__container{
-    padding: 2rem 0 2rem;
+.footer__container {
+  padding: 2rem 0 2rem;
 }
-.footer__title,
-.footer__link{
-    color: var(--title-color);
+.footer__title {
+  color: var(--heading-text);
 }
-.footer__title{
-    text-align: center;
-    margin-bottom: var(--mb-2);
+.footer__link {
+  color: var(--subcontent-text);
 }
-.footer__link:hover{
-    color: var(--title-color-dark);
+.footer__title {
+  text-align: center;
+  margin-bottom: var(--mb-2);
 }
-.footer__list{
-    display: flex;
-    justify-content: center;
-    column-gap: 1.5rem;
-    margin-bottom: var((--mb-2));
+.footer__link:hover {
+  color: var(--title-color-dark);
 }
-.footer__social{
-    display: flex;
-    justify-content: center;
-    column-gap: 1.25rem;
+.footer__list {
+  display: flex;
+  justify-content: center;
+  column-gap: 1.5rem;
+  margin-bottom: var((--mb-2));
 }
-.footer__social-link{
-    background-color: var(--title-color);
-    color: var(--container-color);
-    font-size: 1.125rem;
-    padding: 0.4rem;
-    border-radius: 0.5rem;
-    display: inline-flex;
-    /* margin-top: 1.5rem; */
+.footer__social {
+  display: flex;
+  justify-content: center;
+  column-gap: 1.25rem;
 }
-.footer__social-link:hover{
-    background-color: var(--title-color-dark);
+.footer__social-link {
+  color: var(--container-color);
+  padding: 0.4rem;
+  border-radius: 0.5rem;
+  display: inline-flex;
+  border: 1px solid black;
 }
-.footer__copy{
-display: block;
-margin-top: 1.5rem;
-color: var(--title-color);
-text-align: center;
-font-size: var(--smaller-font-size);
+.footer__social-link:hover {
+  background-color: #ffffff;
 }
-.footer__social a{
-   
-    margin-top: 2rem;
-    
+.footer__copy {
+  display: block;
+  margin-top: 1.5rem;
+  color: var(--title-color);
+  text-align: center;
+  font-size: var(--smaller-font-size);
+  color: var(--subcontent-text);
+}
+.footer__social a {
+  margin-top: 2rem;
 }
 
 /*=============== BREAKPOINTS ===============*/
 /* For large devices */
 @media screen and (max-width: 992px) {
-.footer__social-link{
+  .footer__social-link {
     padding: 0.25rem;
     border-radius: 0.25rem;
     font-size: 1rem;
-}
-
-/* .footer__social-link a{
-    margin-top: 1.5rem;
-} */
-
+  }
 }
 
 /* For medium devices */
 @media screen and (max-width: 768px) {
-
-  /* .footer__social-link{
-    margin-top: 1.5rem;
-} */
 }
 
 @media screen and (max-width: 576px) {
-
-    /* .footer__social-link{
-    margin-top: 1.5rem;
-} */
 }
 
 /* For small devices */
 @media screen and (max-width: 350px) {
-    
-    /* .footer__social-link{
-    margin-top: 1.5rem;
-} */
-
+}
+#facebook {
+  color: blue;
+  border-radius: 0.5rem;
+  background-color: #ffffff;
+  font-size: 1.5rem;
+}
+#instagram {
+  color: #d93025;
+  background-color: #ffffff;
+  border-radius: 0.5rem;
+  font-size: 1.5rem;
+}
+#twitter {
+  color: blue;
+  background-color: #ffffff;
+  border-radius: 0.5rem;
+  font-size: 1.5rem;
 }
