--- a/portfolio/src/components/header/header.css
+++ b/portfolio/src/components/header/header.css
@@ -4,10 +4,7 @@
   top: 0;
   left: 0;
   z-index: var(--z-fixed);
-  /* background-color: var(--body-color); */
   background-color: var(--body-color);
-  /* background-color: red; */
-  /* border: var(--border-layout); */
   padding-top: 0.5rem;
 }
 
@@ -21,7 +18,7 @@
 
 .nav__logo,
 .nav__toggle {
-  color: var(--title-color);
+  color: var(--content-text);
   font-weight: var(--font-medium);
 }
 
@@ -35,7 +32,9 @@
   flex-direction: column;
   align-items: center;
   font-size: var(--small-font-size);
-  color: var(--title-color);
+
+  color: var(--subcontent-text);
+
   font-weight: var(--font-medium);
   transition: 0.3s;
 }
@@ -49,14 +48,11 @@
 /* Active Link */
 .active-link,
 .nav__link:hover {
-  color: var(--title-color-dark);
-  /* color: green; */
-  /* color:red; */
+  color: var(--content-text);
 }
 
-
 /* Change  Background Header*/
-.scroll-header{
+.scroll-header {
   box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
 }
 /* = = = = = BREAKPOINTS = = = = = */
@@ -71,20 +67,18 @@
   }
   .nav__menu {
     position: fixed;
-    /* bottom: 0 */  /*Actual*/
     bottom: -100%;
     left: 0;
     width: 100%;
     background-color: var(--body-color);
     padding: 2rem 1.5rem 4rem;
     box-shadow: 0 -1px 4px rgba(0, 0, 0, 0.15);
-    /* background-color: red; */
     border-radius: 1.5rem 1.5rem 0 0;
     transition: 0.3s;
   }
 
   /* Show Menu */
-  .show-menu{
+  .show-menu {
     bottom: 0;
   }
 
@@ -110,21 +104,16 @@
     color: var(--title-color-dark);
   }
 
-.nav__toggle{
+  .nav__toggle {
     font-size: 1.1rem;
     cursor: pointer;
-}
-
+  }
 
   .nav__icon,
   .nav__close,
   .nav__toggle {
     display: block;
   }
-  /* Customization */
-  /* .nav__logo {
-    display: none;
-  } */
 }
 
 /* For Small devices */
@@ -137,4 +126,3 @@
     column-gap: 0;
   }
 }
-
