--- a/portfolio/src/components/home/home.css
+++ b/portfolio/src/components/home/home.css
@@ -19,11 +19,11 @@
 }
 .home__social-icon:hover {
   color: var(--title-color-dark);
-  /* color: red; */
 }
 .home__title {
   font-size: var(--big-font-size);
   margin-bottom: var(--mb-0-25);
+  color: var(--heading-text);
 }
 .home__hand {
   width: 38px;
@@ -37,6 +37,7 @@
   padding-left: 5.4rem;
   font-weight: var(--font-normal);
   margin-bottom: var(--mb-1);
+  color: var(--content-text);
 }
 
 .home__subtitle::before {
@@ -52,6 +53,7 @@
 .home__description {
   max-width: 400px;
   margin-bottom: var(--mb-3);
+  color: var(--subcontent-text);
 }
 
 .home__img {
@@ -95,7 +97,7 @@
 }
 
 .home__scroll-name {
-  color: var(--title-color);
+  color: var(--subcontent-text);
   font-weight: var(--font-medium);
   margin-right: var(--mb-0-25);
   margin-left: 2px;
@@ -121,7 +123,6 @@
   .home__subtitle {
     padding-left: 3.75rem;
     margin-bottom: var(--mb-1);
-    
   }
   .home__subtitle::before {
     width: 42px;
