--- a/portfolio/src/components/qualification/qualification.css
+++ b/portfolio/src/components/qualification/qualification.css
@@ -1,7 +1,5 @@
 .qualification__container {
   max-width: 768px;
-  /* border: 1px solid rgba(0,0,0, 0.1);
-  background-color: var(--container-color); */
 }
 .qualification__tabs {
   display: flex;
@@ -17,62 +15,64 @@
 }
 .qualification__button:hover {
   color: var(--title-color-dark);
-  /* color: green; */
 }
 .qualification__icon {
   font-size: 1.8rem;
   margin-right: var(--mb-0-25);
 }
-.qualification__active{
-    color: var(--title-color-dark);
+.qualification__active {
+  color: var(--title-color-dark);
 }
-.qualification__sections{
-    display: grid;
-    grid-template-columns: 0.5fr;
-    justify-content: center;
+.qualification__sections {
+  display: grid;
+  grid-template-columns: 0.5fr;
+  justify-content: center;
 }
-.qualification__content{
-    display: none;
+.qualification__content {
+  display: none;
 }
-.qualification__content-active{
-    display: block;
+.qualification__content-active {
+  display: block;
 }
-.qualification__data{
-    display: grid;
-    grid-template-columns: 1fr max-content 1fr;
-    column-gap: 1.5rem;
+.qualification__data {
+  display: grid;
+  grid-template-columns: 1fr max-content 1fr;
+  column-gap: 1.5rem;
 }
-.qualification__title{
-    font-size: var(--normal-font-size);
-    font-weight: var(--font-medium);
+.qualification__title {
+  font-size: var(--normal-font-size);
+  font-weight: var(--font-medium);
+  color: var(--heading-text);
 }
-.qualification__subtitle{
-    display: inline-block;
-    font-size: var(--small-font-size);
-    margin-bottom: var(--mb-1);
+.qualification__subtitle {
+  display: inline-block;
+  font-size: var(--small-font-size);
+  margin-bottom: var(--mb-1);
+  color: var(--content-text);
 }
-.qualification__calendar{
-    font-size: var(--small-font-size);
+.qualification__calendar {
+  font-size: var(--small-font-size);
+  color: var(--subcontent-text);
 }
-.qualification__rounder{
-    display: inline-block;
-    width: 13px;
-    height: 13px;
-    background-color: var(--title-color);
-    border-radius: 50%;
+.qualification__rounder {
+  display: inline-block;
+  width: 13px;
+  height: 13px;
+  background-color: var(--title-color);
+  border-radius: 50%;
 }
-.qualification__line{
-    display: block;
-    width: 1px;
-    height: 100%;
-    background-color: var(--text-color);
-    transform: translate(6px, -7px);
+.qualification__line {
+  display: block;
+  width: 1px;
+  height: 100%;
+  background-color: var(--text-color);
+  transform: translate(6px, -7px);
 }
 
 /*=============== BREAKPOINTS ===============*/
 /* For large devices */
 @media screen and (max-width: 992px) {
-  .qualification__container{
+  .qualification__container {
     margin-left: auto;
     margin-right: auto;
   }
@@ -80,29 +80,33 @@
 
 /* For medium devices */
 @media screen and (max-width: 768px) {
- .qualification__container{
+  .qualification__container {
     margin-left: var(--mb-1-5);
     margin-right: var(--mb-1-5);
- }
+  }
 }
 
 @media screen and (max-width: 576px) {
-    .qualification__sections{
-        grid-template-columns: initial;
-    }
-    .qualification__button{
-        margin: 0 var(--mb-0-75);
-    }
+  .qualification__sections {
+    grid-template-columns: initial;
+  }
+  .qualification__button {
+    margin: 0 var(--mb-0-75);
+  }
 }
 
 /* For small devices */
 @media screen and (max-width: 350px) {
-  .qualification__data{
-    gap:0.5rem;
+  .qualification__data {
+    gap: 0.5rem;
   }
 }
-.education__icon{
+.education__icon {
   background-color: var(--education-icon);
-  border-radius: 1rem;
+  border-radius: 0.5rem;
   font-size: 1.5rem;
+}
+#education,
+#experience {
+  color: var(--heading-text);
 }
