--- a/portfolio/src/components/services/services.css
+++ b/portfolio/src/components/services/services.css
@@ -6,9 +6,7 @@
 
 .services__content {
   position: relative;
-  /* border: 1px solid rgba(0, 0, 0, 0.1); */
   border: var(--border-layout);
-  /* background-color: var(--container-color); */
   background-color: var(--border-background);
   border-radius: 1.5rem;
   padding: 6rem 0 2rem 2.5rem;
@@ -25,10 +23,11 @@
   font-size: var(--h3-font-size);
   margin-bottom: var(--mb-1);
   font-weight: var(--font-medium);
+  color: var(--heading-text);
 }
 
 .services__button {
-  color: var(--title-color);
+  color: #f5f5f5;
   font-size: var(--small-font-size);
   display: inline-flex;
   align-items: center;
@@ -39,6 +38,7 @@
 .services__button-icon {
   font-size: 1rem;
   transition: 0.3s;
+  color: var(--heading-text);
 }
 .services__button:hover .services__button-icon {
   transform: translateX(00.25rem);
@@ -63,10 +63,7 @@
   width: 500px;
   position: relative;
   background-color: var(--container-color);
-
   border: var(--border-layout);
-  /* background-color:red; */
-  /* background-color: aliceblue; */
   padding: 4.5rem 2.5rem 2.5rem;
   border-radius: 1.5rem;
 }
@@ -81,17 +78,18 @@
 .services__modal-title,
 .services__modal-description {
   text-align: center;
-  /* text-align: justify; */
 }
 .services__modal-title {
   font-size: var(--h3-font-size);
   font-weight: var(--font-medium);
   margin-bottom: var(--mb-1);
+  color: var(--content-text);
 }
 .services__modal-description {
   font-size: var(--small-font-size);
   padding: 0 3.5rem;
   margin-bottom: var(--mb-2);
+  color: var(--content-text);
 }
 .services__modal-services {
   row-gap: 0.75rem;
@@ -103,11 +101,12 @@
   column-gap: 0.5rem;
 }
 .services__modal-icon {
-  color: var(--title-color);
+  color: deepskyblue;
   font-size: 1.1rem;
 }
 .services__modal-info {
   font-size: var(--small-font-size);
+  color: var(--subcontent-text);
 }
 /* Active modal */
 .active-modal {
@@ -130,29 +129,43 @@
   .services__content {
     padding: 3.5rem 0.5rem 1.25rem 1.5rem;
   }
-.services__icon{
+  .services__icon {
     font-size: 1.5rem;
-}
-
+  }
 }
 
 @media screen and (max-width: 576px) {
-    .services__modal-content{
-        padding: 4.5rem 1.5rem 2.5rem;
-    }
-.services__modal-description{
+  .services__modal-content {
+    padding: 4.5rem 1.5rem 2.5rem;
+  }
+  .services__modal-description {
     padding: 0;
-}
-
+  }
 }
 
 /* For small devices */
 @media screen and (max-width: 350px) {
-
-    .services__container{
-        grid-template-columns: max-content;
-    }
-    .services__content{
-        padding-right: 6rem;
-    }
+  .services__container {
+    grid-template-columns: max-content;
+  }
+  .services__content {
+    padding-right: 6rem;
+  }
+}
+#software,
+#web,
+#qa {
+  color: var(--text-color);
+}
+#close {
+  background-color: red;
+  border-radius: 0.5rem;
+  color: #ffffff;
+}
+button {
+  border-radius: 0.5rem;
+  padding: 0.5rem;
+  border: var(--border-layout);
+  background-color: teal;
+  color: #f5f5f5;
 }
