--- a/portfolio/src/components/Work/work.css
+++ b/portfolio/src/components/Work/work.css
@@ -57,6 +57,7 @@
 .work__button-icon {
   font-size: 1rem;
   transition: 0.4s;
+  
 }
 .work__button:hover .work__button-icon {
   transform: translateX(0.25rem);
@@ -111,4 +112,8 @@
   .work__filters {
     column-gap: 0.25rem;
   }
+}
+button{
+  /* background-color: red; */
+  border-radius: 0.25rem;
 }
