--- a/portfolio/src/components/home/home.css
+++ b/portfolio/src/components/home/home.css
@@ -57,7 +57,7 @@
 }
 
 .home__img {
-  background: url(../../assets/profile.jpeg);
+  background: url(../../assets/profile.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
